--- a/17-JSF-WebserviceRestfull-client-banco/.project
+++ b/17-JSF-WebserviceRestfull-client-banco/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>16-JSF-Introducao</name>
+	<name>17-JSF-WebserviceRestfull-client-banco</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -17,6 +17,11 @@
 		</buildCommand>
 		<buildCommand>
 			<name>org.jboss.tools.jst.web.kb.kbbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.jboss.tools.ws.jaxrs.metamodelBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -39,5 +44,7 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 		<nature>org.jboss.tools.jst.web.kb.kbnature</nature>
+		<nature>org.jboss.tools.jsf.jsfnature</nature>
+		<nature>org.jboss.tools.ws.jaxrs.nature</nature>
 	</natures>
 </projectDescription>
